--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 ############################
 # --- Required options --- #
 ############################
-url: "http://yjyang.github.io"
-baseurl: ""
+# url: "http://yjyang.github.io"
+# baseurl: ""
 
 # Name of website
 title: Yongjian Yang
@@ -111,8 +111,8 @@ footer-hover-col: "#0085A1"
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
 
-navbar-img: "/assets/img/bgimage.png"
-footer-img: "/assets/img/bgimage.png"
+# navbar-img: "/assets/img/bgimage.png"
+# footer-img: "/assets/img/bgimage.png"
 #page-img: "/assets/img/bgimage.png"
 
 # Suggest a colour for mobile browsers to use as the browser's theme. This is only supported by a few mobile browsers.
