update index in sep

--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ social-network-links:
   github: yjgeno
   twitter: yjyang027
   linkedin: yjyang027
-#  ORCID: your ORCID ID
+  ORCID: 0000-0002-4135-5014
   google-scholar: citations?user=OyIRi9oAAAAJ&hl=en
 #  discord: invite/invite_code or users/userid 
 
